# mnist-vdsp

./: README.md  prototype.ipynb  pyproject.toml
code/: acc.npy  assigned_labels.npy  eqn_clopath.py  eqn_garg.py  label.ipynb  lr.ipynb  network.py  network_clopath.py  network_garg.py  prototype.ipynb  testing.ipynb  testing_garg.ipynb  train.ipynb  training.ipynb  training_garg.ipynb  utils.py  vdsp_weights.npy  visualization.ipynb
code/.ipynb_checkpoints/: label-checkpoint.ipynb  visualization-checkpoint.ipynb
code/clopath/: eqn_clopath.py  training_clopath.ipynb
code/labels/: assigned_labels_0.0001_1.npy  assigned_labels_0.0001_2.npy  assigned_labels_0.0001_3.npy  assigned_labels_0.0001_4.npy  assigned_labels_0.0005_1.npy  assigned_labels_0.0005_2.npy  assigned_labels_0.0005_3.npy  assigned_labels_0.0005_4.npy  assigned_labels_0.0005_5.npy  assigned_labels_0.001_1.npy  assigned_labels_0.001_2.npy  assigned_labels_0.001_3.npy  assigned_labels_0.001_5.npy  assigned_labels_0.005_1.npy  assigned_labels_0.005_2.npy  assigned_labels_0.005_3.npy  assigned_labels_0.005_4.npy  assigned_labels_0.005_5.npy  assigned_labels_0.01_1.npy  assigned_labels_0.01_2.npy  assigned_labels_0.01_3.npy  assigned_labels_0.01_4.npy  assigned_labels_0.01_5.npy  assigned_labels_0.05_1.npy  assigned_labels_0.05_2.npy  assigned_labels_0.05_3.npy  assigned_labels_0.05_4.npy  assigned_labels_0.05_5.npy  assigned_labels_0.1_1.npy  assigned_labels_0.1_2.npy  assigned_labels_0.1_3.npy  assigned_labels_0.1_4.npy  (+11 more)
trained_model/: adaptation_n.npy  weights.npy  weights_10.npy  weights_400.npy
(+63 files in other folders)
