[project]
name = "mnist-vdsp"
version = "0.1.0"
description = "Unsupervised learning of SNN for MNIST Classification using VDSP"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "brian2>=2.10.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
]
